[package]
name = "merino"
version = "0.1.4"
description = "A SOCKS5 Proxy server written in Rust"
repository = "https://github.com/ajmwagar/merino"
readme = "README.md"
license = "MIT"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[registries.crates-io]
protocol = "sparse"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
snafu = "0.8"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
itertools = "0.14"
async-watcher = "0.3"

